[package]
name = "yrs-lmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib0 = ">= 0.16"
yrs = ">= 0.16"
thiserror = "1.0"
smallvec = { version="1.10", features=["write","union","const_generics","const_new"] }
lmdb-rs = { version = "0.7" }
rocksdb = { version = "0.19" }