[package]
name = "yrs-lmdb"
version = "0.3.0"
description = "Persistence layer over Yrs documents for LMDB backend"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "persistence", "lmdb"]
edition = "2018"
homepage = "https://github.com/y-crdt/yrs-persistence"
repository = "https://github.com/y-crdt/yrs-persistence"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs-kvstore = {version = "0.3", path = "../yrs-kvstore"}
lmdb-rs = { version = "0.7" }

[dev-dependencies]
yrs = "0.19"
criterion = "0.5"
rand = "0.7"

[[bench]]
name = "benches"
harness = false

[lib]
doctest = false
bench = true
doc = true