[package]
name = "yrs-rocksdb"
version = "0.3.0"
description = "Persistence layer over Yrs documents for RocksDB backend"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "persistence", "rocksdb"]
edition = "2018"
homepage = "https://github.com/y-crdt/yrs-persistence"
repository = "https://github.com/y-crdt/yrs-persistence"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs-kvstore = { version = "0.3", path = "../yrs-kvstore" }
rocksdb = { version = "0.22" }

[dev-dependencies]
yrs = "0.19"
criterion = "0.5"
tempdir = "0.3"

[[bench]]
name = "benches"
harness = false

[lib]
doctest = false
bench = true
doc = true